--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Salsa', cursive;
+    color: white;
 }
 
 .Main{
@@ -13,28 +14,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: #43DD65;
 }
 
-.start{
-    width: 50%;
+.startMain{
+    width: 70%;
+    height: 60%;
     display: flex;
     align-items: center;
     flex-direction: column;
+    border: 3px black solid;
+    border-radius: 10px;
+    justify-content: center;
+    background-color: #FFC10F;
 }
 
 .startbtn{
-    margin: 30px;
     cursor: pointer;
-    
 }
 
 .heading1{
-    margin-bottom: 20px;
-    margin-top: 60px;
-    font-size: 30px;
+    font-size: 50px;
     font-family: 'Salsa', cursive;
-    color: white;
+    color: black;
+    margin-bottom: 30px;
 }
 
 .Main1{
@@ -42,23 +45,16 @@
 }
 
 .button-style {
-    width: 100px;
-    background-image: linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);
-    text-align: center;
-    margin: 0 auto;
-    position: relative;
-    color: #fff;
-    display: block;
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-.button-style span {
-    padding: 5px 0;
+    width: 150px;
+    height: 60px;
+    border-radius: 10px;
+    border-top: 1px solid #000;
+    border-right: 6px solid #000;
+    border-bottom: 6px solid #000;
+    border-left: 1px solid #000;
+    background: #DD2E30;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 30px;
-    display: block;
-    margin: 3px;
-    background: #000;
-    border-radius: 5px;
-    font-family: 'Salsa', cursive;
 }
