--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -11,7 +11,7 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    background-color: #000000;
+    background-color: #DD2E30;
     position: absolute;
     top: 0;
     left: 0;
@@ -28,20 +28,11 @@
     padding: 5px;
 }
 
-.card{
+.disBox{
     height: 80%;
     width: 75%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 60%, #f8ef6f 95%);
-    border-radius: 12px;
-}
-
-.disBox{
-    height: 99%;
-    width:99%;
-    background-color: #222222;
+    background-color: #FFC10F;
+    border: 3px black solid;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -61,7 +52,7 @@
   
 .Ques{
     margin: 20px;
-    font-size: 35px;
+    font-size: 40px;
 }
 
 
@@ -81,16 +72,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50px;
+    height: 60px;
     width: 90%;
-    border-radius: 25px;
-    background-color: #1ef18e;
+    border-radius: 10px;
+    border-top: 1px solid #000;
+    border-right: 6px solid #000;
+    border-bottom: 6px solid #000;
+    border-left: 1px solid #000;
+    background-color: #7C3CFF;
     color:white;
+    cursor: pointer;
+}
+
+.opt:hover{
+    background-color: #2a0080;
 }
 
 .opt h2{
     font-size: 20px;
-    color: black;
+    color: white;
 }
 
 .Btn{
@@ -112,4 +112,19 @@
 .highlight > button{
     padding: 5px;
     margin: 10px;
+    width: 200px;
+    height: 50px;
+    background-color: #43DD65;
+    border-radius: 10px;
+    border-top: 1px solid #000;
+    border-right: 6px solid #000;
+    border-bottom: 6px solid #000;
+    border-left: 1px solid #000;
+    color: black;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.highlight>button:hover{
+    background-color: #029923;
 }
