--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -5,43 +5,79 @@
     font-family: 'Salsa', cursive;
   }
 
+/* setting the properties of the main div */
 .main{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    background-color: #DD2E30;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
+/* changing the background based on the mode */
+.light{
+    background-image: url(./light.png);
+}
+
+.dark{
+    background-image: url(./dark.png);
+}
+
+/* Changing the color based on the mode  */
+.white{
+    color: white;
+}
+
+.black{
+    color: black;
+}
+
+/* giving properties to the toggle box */
 .toggle{
     position: absolute;
     top: 20px;
     right: 20px;
+    background-color: black;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.logo{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: white;
 }
 
 .toggle>button{
     padding: 5px;
 }
 
+/* giving glassmorphism type effect to the  */
 .disBox{
     height: 80%;
     width: 75%;
-    background-color: #FFC10F;
-    border: 3px black solid;
+    border: 1px white solid;
     display: flex;
     align-items: center;
     flex-direction: column;
     border-radius: 12px;
-    color: white;
+    background: rgba(255, 255, 255, 0.16);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.8px);
+    -webkit-backdrop-filter: blur(6.8px);
 }
 
 .heading{
     margin: 40px 0 20px 0;
+    color: white;
 }
 
 .Num{
@@ -53,10 +89,10 @@
 .Ques{
     margin: 20px;
     font-size: 40px;
+    color: white;
 }
 
-
-
+/* giving the prperties to the options */
 .optBox{
     height: 200px;
     width: 100%;
@@ -79,18 +115,26 @@
     border-right: 6px solid #000;
     border-bottom: 6px solid #000;
     border-left: 1px solid #000;
-    background-color: #7C3CFF;
-    color:white;
     cursor: pointer;
 }
 
-.opt:hover{
-    background-color: #2a0080;
+/* setting the color properties based on the mode */
+.darkOpt{
+    background-color: #7C3CFF;
+    color: white;
 }
 
-.opt h2{
-    font-size: 20px;
-    color: white;
+.lightOpt{
+    background-color: #fff;
+    color: black;
+}
+
+.lightOpt:hover{
+    background-color: #c0c0c0;
+}
+
+.darkOpt:hover{
+    background-color: #2a0080;
 }
 
 .Btn{
@@ -114,7 +158,6 @@
     margin: 10px;
     width: 200px;
     height: 50px;
-    background-color: #43DD65;
     border-radius: 10px;
     border-top: 1px solid #000;
     border-right: 6px solid #000;
@@ -125,6 +168,20 @@
     cursor: pointer;
 }
 
-.highlight>button:hover{
-    background-color: #029923;
+/* color of the highlight buttons based on the mode */
+.darkHighlight>button{
+    background-color: #43DD65;
+}
+
+.lightHighlight>button{
+    background: #DD2E30;
+}
+
+.lightHighlight>button:hover{
+    background-color: #ce0003;
+    color: white;
+}
+
+.darkHighlight>button:hover{
+    background-color: #27833b;
 }
